[gd_scene load_steps=21 format=3 uid="uid://bd211vu1frvdv"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_hkaha"]
[ext_resource type="PackedScene" uid="uid://4bwln1v333io" path="res://scenes/partials/effects/fader.tscn" id="2_hg1hy"]
[ext_resource type="Texture2D" uid="uid://gifnjngb0n6" path="res://textures/ui/main-menu-background.png" id="2_rvfup"]
[ext_resource type="Texture2D" uid="uid://exh4idk6j4vy" path="res://textures/ui/button-icon-play.png" id="3_k85ry"]
[ext_resource type="Texture2D" uid="uid://jeijqwiafiqp" path="res://textures/sprites/cloud-1.png" id="3_wpf01"]
[ext_resource type="Texture2D" uid="uid://dpxjumnc7n8mf" path="res://textures/sprites/cloud-6.png" id="4_2cb3c"]
[ext_resource type="Texture2D" uid="uid://c7s268c57t5tp" path="res://textures/ui/button-icon-settings.png" id="4_qyx8j"]
[ext_resource type="Texture2D" uid="uid://b0kiqqhbt1fbh" path="res://textures/sprites/cloud-3.png" id="5_3df3h"]
[ext_resource type="Texture2D" uid="uid://bv0y2dcxtwu2n" path="res://textures/ui/button-icon-quit.png" id="5_5yab0"]
[ext_resource type="Texture2D" uid="uid://dtvongd0wkl78" path="res://textures/ui/button-icon-credits.png" id="5_7yiut"]
[ext_resource type="Texture2D" uid="uid://btlsvvmjv4ubf" path="res://textures/ui/logo-hotel.png" id="6_tcvwp"]
[ext_resource type="Texture2D" uid="uid://dngxbclty4imi" path="res://textures/sprites/cloud-4.png" id="6_v4oiw"]
[ext_resource type="Texture2D" uid="uid://c4dxwwabk818k" path="res://textures/ui/logo-catto.png" id="7_kffct"]
[ext_resource type="PackedScene" uid="uid://c4oey4snx5e2g" path="res://scenes/ui/settings-panel.tscn" id="10_lfqpg"]
[ext_resource type="Texture2D" uid="uid://b6nufxi174tmn" path="res://textures/ui/badge-icon-cat.png" id="10_wtihg"]
[ext_resource type="Texture2D" uid="uid://df1c04bv1qmum" path="res://textures/ui/credits-pic-iris.png" id="11_6mqfo"]
[ext_resource type="Texture2D" uid="uid://l8e1c3cs1alj" path="res://textures/ui/credits-pic-loki.png" id="12_solee"]

[sub_resource type="Animation" id="Animation_v4nem"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo/Hotel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-172, 0)]
}

[sub_resource type="Animation" id="Animation_ph5d2"]
resource_name = "logo_animation"
length = 3.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo/Hotel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(0.75, 0.75, 1),
"update": 0,
"values": [Vector2(-172, 0), Vector2(-172, -20), Vector2(-172, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo/Catto:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.633333, 2.13333, 3.63333),
"transitions": PackedFloat32Array(0.75, 0.75, 1),
"update": 0,
"values": [Vector2(-172, 0), Vector2(-172, -20), Vector2(-172, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rjqi6"]
_data = {
"RESET": SubResource("Animation_v4nem"),
"logo_animation": SubResource("Animation_ph5d2")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hkaha")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rvfup")

[node name="Clouds" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cloud-1" type="Sprite2D" parent="Clouds"]
position = Vector2(155, 404)
texture = ExtResource("3_wpf01")

[node name="Cloud-6" type="Sprite2D" parent="Clouds"]
position = Vector2(817, 430)
texture = ExtResource("4_2cb3c")

[node name="Cloud-3" type="Sprite2D" parent="Clouds"]
position = Vector2(647, 72)
texture = ExtResource("5_3df3h")

[node name="Cloud-4" type="Sprite2D" parent="Clouds"]
position = Vector2(312, 164)
texture = ExtResource("6_v4oiw")

[node name="ButtonPlay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 268.0
offset_right = 136.0
offset_bottom = 312.0
grow_horizontal = 2
theme_type_variation = &"PositiveButton"
text = "Play"
icon = ExtResource("3_k85ry")
alignment = 0

[node name="ButtonSettings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 328.0
offset_right = 136.0
offset_bottom = 376.0
grow_horizontal = 2
text = "Settings"
icon = ExtResource("4_qyx8j")
alignment = 0

[node name="ButtonCredits" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 392.0
offset_right = 136.0
offset_bottom = 440.0
grow_horizontal = 2
text = "Credits"
icon = ExtResource("5_7yiut")
alignment = 0

[node name="ButtonQuit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 456.0
offset_right = 136.0
offset_bottom = 504.0
grow_horizontal = 2
text = "Quit"
icon = ExtResource("5_5yab0")
alignment = 0

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = 180.0
offset_right = -3.0
offset_bottom = 212.0
grow_horizontal = 2
scale = Vector2(2, 2)
texture = ExtResource("10_wtihg")

[node name="Logo" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 8.0
offset_right = 20.0
offset_bottom = 48.0
grow_horizontal = 2

[node name="Hotel" type="TextureRect" parent="Logo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_right = 192.0
offset_bottom = 200.0
grow_horizontal = 2
texture = ExtResource("6_tcvwp")

[node name="Catto" type="TextureRect" parent="Logo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = -5.81273
offset_right = 192.0
offset_bottom = 194.187
grow_horizontal = 2
texture = ExtResource("7_kffct")

[node name="LogoAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rjqi6")
}
autoplay = "logo_animation"

[node name="Settings" parent="." instance=ExtResource("10_lfqpg")]
visible = false
layout_mode = 1

[node name="Credits" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Heading" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 200.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 33
text = "Credits"

[node name="GridContainer" type="GridContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 32.0
offset_top = 70.0
offset_right = -26.0
offset_bottom = 468.0
grow_horizontal = 2
columns = 3

[node name="Visuals" type="Control" parent="Credits/GridContainer"]
custom_minimum_size = Vector2(298, 360)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/GridContainer/Visuals"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.360784, 0.360784, 0.439216, 1)
theme_override_constants/outline_size = 0
bbcode_enabled = true
text = "[center][color=#32a852]Visuals[/color]

[url=https://14collective.itch.io/cats]Pixel Cats by the14collective[/url]

[url=https://departuremono.com/]DepartureMono font[/url]

[url=https://astropulse.gumroad.com/l/FamiliarPixelCursors]Familiar pixel cursors by Cody Claus[/url]

[url=https://artisan-studio.itch.io/2d-pixel-art-semi-realistic-clouds]Pixel art clouds by Artisan[/url]

[url=https://piiixl.itch.io/space]Space art by PiiiXL[/url]
[/center]"

[node name="Audio" type="Control" parent="Credits/GridContainer"]
custom_minimum_size = Vector2(298, 340)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/GridContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.360784, 0.360784, 0.439216, 1)
theme_override_constants/outline_size = 0
bbcode_enabled = true
text = "[center][color=#519de0]Audio[/color]

[url=https://www.zapsplat.com/]Some sound effects from ZapSplat[/url]

Music and other audio by me

Voice actors:

     Iris


     Loki
[/center]"

[node name="Credits-pic-iris" type="Sprite2D" parent="Credits/GridContainer/Audio"]
position = Vector2(113, 295)
scale = Vector2(0.4, 0.4)
texture = ExtResource("11_6mqfo")

[node name="Credits-pic-loki" type="Sprite2D" parent="Credits/GridContainer/Audio"]
position = Vector2(113, 379)
scale = Vector2(0.25, 0.25)
texture = ExtResource("12_solee")

[node name="Code" type="Control" parent="Credits/GridContainer"]
custom_minimum_size = Vector2(298, 340)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/GridContainer/Code"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.360784, 0.360784, 0.439216, 1)
theme_override_constants/outline_size = 0
bbcode_enabled = true
text = "[center][color=#e86c4d]Programming[/color]

Me :)
[/center]"

[node name="ButtonReturn" type="Button" parent="Credits"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -64.0
offset_right = 286.0
offset_bottom = -24.0
grow_vertical = 0
text = "Back to main menu"

[node name="Fader" parent="." instance=ExtResource("2_hg1hy")]
visible = false
layout_mode = 1
color = Color(0, 0, 0, 1)

[connection signal="mouse_entered" from="ButtonPlay" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="ButtonPlay" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ButtonSettings" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="ButtonSettings" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ButtonCredits" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="ButtonCredits" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ButtonQuit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Credits/ButtonReturn" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Credits/ButtonReturn" to="." method="_on_button_back_to_main_menu_pressed"]
[connection signal="pressed" from="Credits/ButtonReturn" to="." method="_on_button_pressed"]
